--- a/Yuga1.0/Yuga1.0.vcxproj.filters
+++ b/Yuga1.0/Yuga1.0.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="camera.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tetMesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -32,9 +35,14 @@
     <ClCompile Include="camera.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="tetMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="ColorFragmentShader.glsl" />
     <None Include="ColorVertexShader.glsl" />
+    <None Include="lighting.fs.glsl" />
+    <None Include="lighting.vs.glsl" />
   </ItemGroup>
 </Project>
