--- a/Yuga1.0/Yuga1.0.vcxproj
+++ b/Yuga1.0/Yuga1.0.vcxproj
@@ -82,11 +82,13 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="camera.h" />
+    <ClInclude Include="corotationalLinearFEM.h" />
     <ClInclude Include="tetMesh.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="corotationalLinearFEM.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="tetMesh.cpp" />
   </ItemGroup>
