--- a/Yuga1.0/Yuga1.0.vcxproj.filters
+++ b/Yuga1.0/Yuga1.0.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="tetMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="corotationalLinearFEM.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp">
@@ -36,6 +39,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="tetMesh.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="corotationalLinearFEM.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
