--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{EDBFF82F-71EA-4FAB-93CC-F77C36E13F05}</ProjectGuid>
+    <ProjectGuid>{1D8EC054-5EE6-491C-AEE9-98902059F51B}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>Yuga10</RootNamespace>
+    <RootNamespace>test</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -57,7 +57,6 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -76,33 +75,10 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="App.h" />
-    <ClInclude Include="camera.h" />
-    <ClInclude Include="corotationalLinearFEM.h" />
-    <ClInclude Include="StVKInternalForces.h" />
-    <ClInclude Include="StVKTet.h" />
-    <ClInclude Include="StvkTetABCD.h" />
-    <ClInclude Include="tetMesh.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="App.cpp" />
-    <ClCompile Include="camera.cpp" />
-    <ClCompile Include="corotationalLinearFEM.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="StVKInternalForces.cpp" />
-    <ClCompile Include="StVKTet.cpp" />
-    <ClCompile Include="StVKTetABCD.cpp" />
-    <ClCompile Include="tetMesh.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="ColorFragmentShader.glsl" />
-    <None Include="ColorVertexShader.glsl" />
-    <None Include="lighting.fs.glsl" />
-    <None Include="lighting.vs.glsl" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
