--- a/Yuga1.0/Yuga1.0.vcxproj
+++ b/Yuga1.0/Yuga1.0.vcxproj
@@ -92,6 +92,7 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="FULLIntegrator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TetMesh.cpp" />
   </ItemGroup>
