--- a/Yuga1.0/Yuga1.0.vcxproj
+++ b/Yuga1.0/Yuga1.0.vcxproj
@@ -82,6 +82,7 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="camera.h" />
+    <ClInclude Include="CONJUGATE_GRADIENT.h" />
     <ClInclude Include="COO_MATRIX.h" />
     <ClInclude Include="FULLIntegrator.h" />
     <ClInclude Include="Material.h" />
