--- a/Yuga1.0/Yuga1.0.vcxproj
+++ b/Yuga1.0/Yuga1.0.vcxproj
@@ -58,6 +58,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>glfw3.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <IgnoreAllDefaultLibraries>false</IgnoreAllDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -76,7 +77,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>glfw3.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -87,15 +88,21 @@
     <ClInclude Include="FULLIntegrator.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="MaterialLinearElasticity.h" />
+    <ClInclude Include="ProjectAndUnProject.h" />
     <ClInclude Include="SETTINGS.h" />
     <ClInclude Include="TetMesh.h" />
+    <ClInclude Include="TIMER.h" />
+    <ClInclude Include="TIMING_BREAKDOWN.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="camera.cpp" />
+    <ClCompile Include="CONJUGATE_GRADIENT.cpp" />
     <ClCompile Include="FULLIntegrator.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TetMesh.cpp" />
+    <ClCompile Include="TIMER.cpp" />
+    <ClCompile Include="TIMING_BREAKDOWN.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ColorFragmentShader.glsl" />
